# jump

./: .gitignore  CMakeLists.txt  README.md  sourcelist.cmake
.github/workflows/: debug.yml  experimental.yml  release.yml
include/jump/: experimental.hpp  jump.hpp
include/jump/autodiff/: dual.hpp  dual_decl.hpp  dual_friends.hpp
include/jump/data/: banded_matrix.hpp  banded_matrix_decl.hpp  banded_matrix_friends.hpp  banded_matrix_impl.hpp  dense_matrix.hpp  dense_matrix_decl.hpp  dense_matrix_friends.hpp  dense_matrix_impl.hpp  eigendata.hpp  eigendata_decl.hpp  eigendata_impl.hpp  matrix_base.hpp  matrix_base_decl.hpp  matrix_base_impl.hpp  vector.hpp  vector_decl.hpp  vector_friends.hpp  vector_impl.hpp
include/jump/debug/: error_data.hpp  exception.hpp  exception_decl.hpp  exception_impl.hpp
include/jump/experimental/autodiff/: dual.hpp  dual_decl.hpp  dual_friends.hpp
include/jump/experimental/data/: mat.hpp  mat2.hpp  mat3.hpp  mat4.hpp  storage.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/jump/experimental/expression_templates/: banded_matrix_expressions.hpp  banded_matrix_functors.hpp  banded_matrix_operators.hpp  concepts.hpp  constants.hpp  dense_matrix_expressions.hpp  dense_matrix_functors.hpp  dense_matrix_operators.hpp  functional.hpp  functors.hpp  vector_expressions.hpp  vector_functors.hpp  vector_operators.hpp
include/jump/experimental/testing/: test.hpp  test_decl.hpp
include/jump/expression_templates/: banded_matrix_expressions.hpp  banded_matrix_functors.hpp  banded_matrix_operators.hpp  dense_matrix_expressions.hpp  dense_matrix_functors.hpp  dense_matrix_operators.hpp  vector_expressions.hpp  vector_functors.hpp  vector_operators.hpp
include/jump/linear_algebra/: banded_linear_system.hpp  banded_linear_system_decl.hpp  dense_linear_system.hpp  dense_linear_system_decl.hpp  dense_linear_system_impl.hpp  generalised_eigenvalue_system.hpp  generalised_eigenvalue_system_decl.hpp  generalised_eigenvalue_system_impl.hpp  linear_system_base.hpp
include/jump/testing/: heirarchy.hpp  heirarchy_decl.hpp  reporter.hpp  reporter_decl.hpp  test.hpp  test_decl.hpp  test_result.hpp  test_result_decl.hpp  test_suite.hpp  testing.hpp
include/jump/utility/: command_line_args.hpp  command_line_args_decl.hpp  command_line_args_impl.hpp  external.hpp  file_system.hpp  file_system_decl.hpp  file_system_impl.hpp  io.hpp  io_decl.hpp  io_impl.hpp  logging.hpp  logging_decl.hpp  random.hpp  random_decl.hpp  random_impl.hpp  third_party.hpp  timer.hpp  timer_decl.hpp  timer_impl.hpp  types.hpp  utility.hpp  utility_decl.hpp
src/data/: eigendata.cpp
src/debug/: error_data.cpp
src/linear_algebra/: banded_linear_system.cpp  dense_linear_system.cpp  generalised_eigenvalue_system.cpp
src/testing/: reporter.cpp  test_result.cpp  test_suite.cpp
src/utility/: command_line_args.cpp  file_system.cpp  logging.cpp  timer.cpp
tests/: CMakeLists.txt  dual.cpp  jump_tests.cpp  linear_algebra.cpp  matrix.cpp  sandbox.cpp  test.cpp  vector.cpp
tests/unit/: dual.hpp  linear_algebra.hpp  matrix.hpp  vector.hpp
